Add button to product

--- a/index.HTML
+++ b/index.HTML
@@ -47,10 +47,10 @@
         
   
          <div class="wrapperi ">
-          <img class="main" src="coffee-pictures/coffee-cafe-friends.jpg" alt="Happy coffee"  width="600PX" border="3px"style= "float:right">
-          <h1 class ="p1">Welcome to Coffee Party,
-          <br class="welcome"> where every cup is a journey and<br/>
-          <br> gathering is an occasion to celebrate!</br></h1>
+           <img class="rounded" src="coffee-pictures/coffee-cafe-friends.jpg" alt="Happy coffee"  width="600PX" border="3px"style= "float:right"><!--it rounded the around of the picture-->
+             <h1 class ="p1",>Welcome to Coffee Party,<!-- if we write h1=class "fw-bolder ,that becomes bold"-->
+              <br class="welcome"> where every cup is a journey and<br/>
+                gathering is an occasion to celebrate!</h1>
   
        
           </div>
